edit w4 index ,edit w4/picture 3-1

--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@ ex= -66.44406598905394 ey= 79.52898738448577
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
-<iframe src="data/shapes W4/ass.html" width="640" height="420"></iframe>
+<img src="data/image W4/ass.png" width="640" />
     </script>
 </section>
 
