edit w11 index.html,edut w11 file name

--- a/index.html
+++ b/index.html
@@ -1717,7 +1717,7 @@ ex= -66.44406598905394 ey= 79.52898738448577
 <!-- 請注意, @others 不可以內縮 -->
 ####利用漸開線原理, 以 Brython 繪製單一正齒輪廓
 
-<img src="data/W11/spur_gear.png" width="600" />
+<img src="data/w11/spur_gear.png" width="600" />
     </script>
 </section>
 
@@ -1744,7 +1744,7 @@ ex= -66.44406598905394 ey= 79.52898738448577
 <!-- 請注意, @others 不可以內縮 -->
 ####利用漸開線原理, 以 cango繪製單一正齒輪廓
 
-<img src="data/W11/cango_spur gear.png" width="600" />
+<img src="data/w11/cango_spur gear.png" width="600" />
     </script>
 </section>
 
@@ -1756,7 +1756,7 @@ ex= -66.44406598905394 ey= 79.52898738448577
 <!-- 請注意, @others 不可以內縮 -->
 ####利用漸開線原理, 以 Brython 繪製齒輪組
 
-<img src="data/W11/spur_gears.png" width="600" />
+<img src="data/w11/spur_gears.png" width="600" />
     </script>
 </section>
 
