add W17 index.html

--- a/index.html
+++ b/index.html
@@ -2431,6 +2431,31 @@ ex= -66.44406598905394 ey= 79.52898738448577
 <section data-markdown>
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
+#第十七週上課筆記
+
+##期末協同查驗與自評
+
+    </script>
+</section>
+
+
+
+						
+<section data-markdown>
+    <script type="text/template">
+<!-- 請注意, @others 不可以內縮 -->
+<iframe src="data/W17/ass.html" width="800" height="600"></iframe>
+    </script>
+</section>
+
+
+
+						
+</section>
+<section>
+<section data-markdown>
+    <script type="text/template">
+<!-- 請注意, @others 不可以內縮 -->
 #第十八週上課筆記
 
 
