edit W17 index.html,add task2

--- a/index.html
+++ b/index.html
@@ -2445,6 +2445,18 @@ ex= -66.44406598905394 ey= 79.52898738448577
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
 <iframe src="data/W17/ass.html" width="800" height="600"></iframe>
+
+
+    </script>
+</section>
+
+
+
+						
+<section data-markdown>
+    <script type="text/template">
+<!-- 請注意, @others 不可以內縮 -->
+<img src="data/W17/twobar.png" width="700" />
     </script>
 </section>
 
